--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -26,7 +26,7 @@
      - neofetch
      - fortune
      - ntpdate
-  ### mgrote.bash_aliases
+  ### igor_mukhin.bash_aliases
   bash_aliases:
     - { alias: 'll', command: 'ls -la' }
     - { alias: 'dig', command: 'dig +short ' }
