--- a/ansible/roles/mgrote.telegraf/tasks/metrics/add_base_metrics.yml
+++ b/ansible/roles/mgrote.telegraf/tasks/metrics/add_base_metrics.yml
@@ -3,4 +3,4 @@
     template:
       src: "base_metrics.conf"
       dest: "/etc/telegraf/telegraf.d/base_metrics.conf"
-    notify: telegraf_starten_aktivieren
+    notify: restart_telegraf
