--- a/ansible/3_base.yml
+++ b/ansible/3_base.yml
@@ -1,14 +1,11 @@
 ---
-- hosts: all
-  serial: 3
+- hosts: fileserver2.grote.lan
   max_fail_percentage: 20%
   roles:
     - { role: mgrote.set_apt_sources, tags: "apt_sources" }
     - { role: mgrote.create_users, tags: "users" }
     - { role: mgrote.set_timezone, tags: "timezone" }
-    - { role: mgrote.paket_installation_update, tags: "updates" }
     - { role: mgrote.motd, tags: "motd" }
-    - { role: mgrote.telegraf, tags: "telegraf" }
     - { role: mgrote.restic, tags: "restic" }
     - { role: igor_mukhin.bash_aliases, tags: "aliases", become: true }
 
@@ -19,6 +16,7 @@
         name: neu
         state: absent
         force: yes
+        remove: yes
 
   vars:
       base_users:
