--- a/ansible/roles/mgrote.fileserver_smb/tasks/main.yml
+++ b/ansible/roles/mgrote.fileserver_smb/tasks/main.yml
@@ -34,7 +34,7 @@
 
   - name: "Setze SAMBA-Passwoerter"
     become: yes
-    shell: "printf '{{ item.password }}\n{{ item.password }}\n' | smbpasswd -a {{ item.name }}" #pipefail: https://blog.christophersmart.com/2019/09/28/using-pipefail-with-shell-module-in-ansible/
+    shell: "printf '{{ item.password }}\n{{ item.password }}\n' | smbpasswd -a {{ item.name }}" # noqa 306 301 #pipefail: https://blog.christophersmart.com/2019/09/28/using-pipefail-with-shell-module-in-ansible/
     with_items:
     - "{{ smb_nutzer }}"
     no_log: True
