--- a/ansible/roles/mgrote.musterrolle/meta/main.yml
+++ b/ansible/roles/mgrote.musterrolle/meta/main.yml
@@ -4,3 +4,14 @@ dependencies:
   vars:
     youtubedl_executable_path: "/usr/local/bin/youtube-dl"
     youtubedl_update: true
+galaxy_info:
+  author: mgrote
+  description: XXX
+  min_ansible_version: 2.0
+  license: GPLv3
+  platforms:
+  - name: Ubuntu
+    versions:
+    - all
+  galaxy_tags:
+    - system
