--- a/ansible/roles/mgrote.postgresql/tasks/main.yml
+++ b/ansible/roles/mgrote.postgresql/tasks/main.yml
@@ -11,19 +11,22 @@
     apt:
       name: acl
 
-  - name: Create database "{{ postgres_datenbank_name }}"
+  - name: Create database
     become: true
     become_user: postgres
     postgresql_db:
-      name: "{{ postgres_datenbank_name }}"
+      name: "{{ item.name_db }}"
+    loop: "{{ postgres_user_and_db }}"
+    no_log: true
 
-  - name: Connect to "{{ postgres_datenbank_name }}" database, create "{{ postgres_datenbank_nutzer_name }}" user, and grant access to database
+  - name: Connect to database, create users and grant access to database
     become: true
     become_user: postgres
     postgresql_user:
-      db: "{{ postgres_datenbank_name }}"
-      name: "{{ postgres_datenbank_nutzer_name }}"
-      password: "{{ postgres_datenbank_nutzer_password }}"
+      db: "{{ item.name_db }}"
+      name: "{{ item.name_db_user }}"
+      password: "{{ item.password_db_user }}"
       priv: "ALL"
       role_attr_flags: SUPERUSER
     no_log: true
+    loop: "{{ postgres_user_and_db }}"
