--- a/ansible/roles/mgrote.telegraf/defaults/main.yml
+++ b/ansible/roles/mgrote.telegraf/defaults/main.yml
@@ -8,3 +8,10 @@ telegraf_hddtemp_metrics: false
 telegraf_smart_metrics: false
 telegraf_x509_metrics: false
 telegraf_zfs_metrics: false
+telegraf_postgres_metrics: false
+telegraf_lm_sensors_metrics: false
+
+  #telegraf_influxdb_srv_fqdn: "grafana.grote.lan"
+telegraf_influxdb_srv_port: 8086
+
+telegraf_installieren: false
