--- a/ansible/roles/mgrote.telegraf/tasks/metrics/add_hddtemp_metrics.yml
+++ b/ansible/roles/mgrote.telegraf/tasks/metrics/add_hddtemp_metrics.yml
@@ -9,11 +9,11 @@
     template:
       src: "hddtemp"
       dest: "/etc/default/hddtemp"
-    notify: hddtemp_starten_aktivieren
+    notify: restart_hddtemp
 
   - name: hddtemp.conf kopieren
     become: yes
     template:
       src: "hddtemp.conf"
       dest: "/etc/telegraf/telegraf.d/hddtemp.conf"
-    notify: telegraf_starten_aktivieren
+    notify: restart_telegraf
