--- a/ansible/roles/mgrote.telegraf/tasks/metrics/add_x509_metrics.yml
+++ b/ansible/roles/mgrote.telegraf/tasks/metrics/add_x509_metrics.yml
@@ -3,5 +3,5 @@
     template:
       src: "ssl.conf"
       dest: "/etc/telegraf/telegraf.d/ssl.conf"
-    notify: telegraf_starten_aktivieren
+    notify: restart_telegraf
 #https://grafana.com/grafana/dashboards/11707
