--- a/ansible/roles/mgrote.telegraf/tasks/metrics/add_zfs_metrics.yml
+++ b/ansible/roles/mgrote.telegraf/tasks/metrics/add_zfs_metrics.yml
@@ -3,5 +3,5 @@
     template:
       src: "zfs.conf"
       dest: "/etc/telegraf/telegraf.d/zfs.conf"
-    notify: telegraf_starten_aktivieren
+    notify: restart_telegraf
 #https://gist.github.com/bartmeuris/41caf0998f38a2fae7cf1ff92cd4a5fa
