--- a/ansible/roles/mgrote.telegraf/templates/telegraf.conf
+++ b/ansible/roles/mgrote.telegraf/templates/telegraf.conf
@@ -1,7 +1,5 @@
 [global_tags]
 
-# fuer https://grafana.com/grafana/dashboards/928 Configuration for telegraf agent
-
 [agent]
 interval = "30s"
 round_interval = true
@@ -15,6 +13,7 @@ debug = false
 quiet = false
 hostname = ""
 omit_hostname = false
+logfile = "/var/log/telegraf/telegraf.log"
 
 [[outputs.influxdb]] urls = ["{{ telegraf_influxdb_srv_protocol }}{{ telegraf_influxdb_srv_fqdn }}:{{ telegraf_influxdb_srv_port }}"]
   ## The target database for metrics; will be created as needed.
