--- a/ansible/roles/mgrote.zfs_tools/tasks/main.yml
+++ b/ansible/roles/mgrote.zfs_tools/tasks/main.yml
@@ -56,6 +56,8 @@
       hour: "{{ item.cron_hour_zfs_trim }}"
       month: "{{ item.cron_month_zfs_trim }}"
       day: "{{ item.cron_day_zfs_trim }}"
+#      disabled: yes
+    when: item.type == 'ssd'
     with_items: "{{ zfs_pool }}"
 
   - name: kopiere zed.rc
