--- a/ansible/roles/mgrote.musterrolle/tasks/main.yml
+++ b/ansible/roles/mgrote.musterrolle/tasks/main.yml
@@ -56,4 +56,4 @@
 
 
 
-# SIEHE: http://dokuwiki2.grote.lan/artikel/technik/linux_-_scripte_-_speicherorte
+# SIEHE: http://dokuwiki2.ausbildung.md/artikel/technik/linux_-_scripte_-_speicherorte
