--- a/ansible/playbooks/base/2_packages.yml
+++ b/ansible/playbooks/base/2_packages.yml
@@ -4,7 +4,7 @@
     max_fail_percentage: 20%
     roles:
 #      - { role: mgrote.set_apt_sources, tags: "apt_sources",
-          when: "not 'hypervisor' in group_names" }
+#          when: "not 'hypervisor' in group_names" }
       - { role: mgrote.update_packages, tags: "updates" }
       - { role: mgrote.install_packages,
           tags: "install" }
