Bugfix: bash-lint

--- a/.github/workflows/bash_lint.yml
+++ b/.github/workflows/bash_lint.yml
@@ -10,4 +10,6 @@ jobs:
       - name: Run Shellcheck
         uses: azohra/shell-linter@latest
         with:
-          path: "*.sh"
+          path: "/*.sh"
+
+# https://github.com/azohra/shell-linter
