--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,9 +1,9 @@
 [defaults]
-inventory = ~/ansible/inventories
+inventory = /home/ansible-user/ansible/inventories
 nocows = 1
 retry_files_enabled = False
-roles_path = ~/ansible/roles
-vault_password_file = ~/ansible/vault-pass.yml
+roles_path = /home/ansible-user/ansible/roles
+vault_password_file = /home/ansible-user/ansible/vault-pass.yml
 [inventory]
 
 [privilege_escalation]
