--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # ansible
-vault-pass.yml
+./ansible/vault-pass.yml
 
 # Created by https://www.gitignore.io/api/archive,diskimage,executable
 # Edit at https://www.gitignore.io/?templates=archive,diskimage,executable
