--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -12,3 +12,5 @@
           ws-ubuntu3.grote.lan:
           ws-ubuntu4.grote.lan:
           ws-ubuntu5.grote.lan:
+      ansible:
+          ws-ubuntu5.grote.lan:
