--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -51,7 +51,28 @@
       servers:
         - proxmox
         - ubuntu
-
+  ### mgrote.install_packages
+  install_packages:
+    - locales
+    - python3
+    - build-essential
+    - ntp
+    - htop
+    - git
+    - dnsutils
+    - nano
+    - mc
+    - cifs-utils
+    - netdiscover
+    - tree
+    - curl
+    - logrotate
+    - ncdu
+    - net-tools
+    - apt-transport-https
+    - ntpdate
+    - acl
+    - vim
   ### mgrote.apt_manage_sources
   manage_sources_apt_proxy_url: "" # leer = kein proxy, sonst "acng.grote.lan:9999"
   manage_sources_enterprise_repo_path: /etc/apt/sources.list.d/pve-enterprise.list # wo ist das enterprise-repo
