--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -1,4 +1,7 @@
 ---
+  ### mgrote.set_apt_sources
+  acng_server: acng.grote.lan
+  acng_server_port: 9999
   ### robertdebock.bootstrap
   users:
     - username: mg
