--- a/ansible/playbooks/2_packages.yml
+++ b/ansible/playbooks/2_packages.yml
@@ -3,4 +3,4 @@
     roles:
       - { role: mgrote.set_apt_sources, tags: "sources", become: yes}
       - { role: mgrote.update_packages, tags: "update", become: yes}
-      - { role: mgrote.install-packages, tags: "install", become: yes}
+      - { role: mgrote.install_packages, tags: "install", become: yes}
