acng zu ubuntu4

--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -1,6 +1,6 @@
 ---
   ### mgrote.set_apt_sources
-  acng_server: acng.grote.lan
+  acng_server: ws-ubuntu4.grote.lan
   acng_server_port: 9999
   ### robertdebock.bootstrap
   users:
