--- a/ansible/group_vars/netzwerkverwalter.yml
+++ b/ansible/group_vars/netzwerkverwalter.yml
@@ -2,3 +2,4 @@ dnsmasq_netid: "192.168.2."
 dnsmasq_firstclient: "222"
 dnsmasq_lastclient: "240"
 dnsmasq_leasetime: "12h"
+ansible_become_pass: "hallowelt"
