set yes to true

--- a/ansible/roles/dhcp_server_einrichten/handlers/main.yml
+++ b/ansible/roles/dhcp_server_einrichten/handlers/main.yml
@@ -1,5 +1,5 @@
 - name: dnsmasq Konfigurationsänderungen aktivieren
-    become: yes
+    become: true
     systemd:
       name: dnsmasq
       enabled: yes
