--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -4,6 +4,7 @@ retry_files_enabled   = False
 roles_path            = ./roles
 lookup_plugins        = ./plugins/lookup
 collections_paths     = ./ansible_collections
+private_key_file      = ./ansible_private_key
 [inventory]
 
 [privilege_escalation]
