add journalcrtl neustarten handler

--- a/ansible/roles/dhcp_server_einrichten/handlers/main.yml
+++ b/ansible/roles/dhcp_server_einrichten/handlers/main.yml
@@ -1,6 +1,13 @@
 - name: dnsmasq Konfigurationsänderungen aktivieren
   become: true
-  systemd:
+  ansible.builtin.systemd:
     name: dnsmasq
+    enabled: yes
+    state: restarted
+
+- name: journalctl neustarten
+  become: true
+  ansible.builtin.systemd:
+    name: systemd-journald
     enabled: yes
     state: restarted
