--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -1,20 +1,13 @@
 ---
-  ### mgrote.netp
-  ntp_timezone: "Europe/Berlin" #Zeitzone in der sich der Cpmputer befindet
-  ntp_driftfile_directory: "/var/lib/ntp" # Ordner für das driftfile
+  ### ntp-client
+  ntp_client_timezone: "Europe/Berlin" #Zeitzone in der sich der Cpmputer befindet
+  ntp_client_driftfile_directory: "/var/lib/ntp" # Ordner für das driftfile
   ntp_client_servers: # welche Server sollen befragt werden
-    - address: ptbtime1.ptb.de
+    - address: ws-ubuntu3.grote.lan
       options: iburst #optionaler parameter
-    - address: ptbtime2.ptb.de
-      options: iburst
-    - address: ptbtime3.ptb.de
-      options: iburst
-    - address: time3.google.com
-      options: iburst
-    - address: ntp0.fau.de
-      options: iburst
-  ntp_daemon_user: ntp # Nutzer + Gruppe für den Dienst
-  ntp_daemon_group: ntp # Nutzer + Gruppe für den Dienst
+  ntp_client_daemon_user: ntp # Nutzer + Gruppe für den Dienst
+  ntp_client_daemon_group: ntp # Nutzer + Gruppe für den Dienst
+  ### net-server
   ### mgrote.set_apt_sources
   acng_server: ws-ubuntu4.grote.lan
   acng_server_port: 9999
