--- a/ansible/roles/ntp-client/tasks/main.yml
+++ b/ansible/roles/ntp-client/tasks/main.yml
@@ -5,6 +5,7 @@
       name: systemd-timesyncd
       state: stopped
       masked: yes
+
   - name: install ntp packages
     become: yes
     ansible.builtin.package:
@@ -12,14 +13,16 @@
         - ntp
         - ntpdate
       state: present
+
   - name: Create ntp driftfile folder
     become: yes
     file:
       state: directory
-      path: "{{ ntp_driftfile_directory }}"
+      path: "{{ ntp_client_driftfile_directory }}"
       mode: 0644
-      owner: "{{ ntp_daemon_user }}"
-      group: "{{ ntp_daemon_group }}"
+      owner: "{{ ntp_client_daemon_user }}"
+      group: "{{ ntp_client_daemon_group }}"
+
   - name: create ntp.conf
     become: yes
     template:
@@ -28,7 +31,8 @@
       mode: 0644
     notify:
       - restart ntpd
-  - name: set Zeitzone to {{ ntp_timezone }}
+
+  - name: set Zeitzone to {{ ntp_client_timezone }}
     become: yes
     ansible.builtin.timezone:
-      name: "{{ ntp_timezone }}"
+      name: "{{ ntp_client_timezone }}"
