ssh pass für ansible

--- a/ansible/roles/geerlingguy.ansible/tasks/setup-Ubuntu.yml
+++ b/ansible/roles/geerlingguy.ansible/tasks/setup-Ubuntu.yml
@@ -1,7 +1,9 @@
 ---
 - name: Ensure dirmngr is installed (gnupg dependency).
   apt:
-    name: dirmngr
+    name:
+      - dirmngr
+      - sshpass
     state: present
 
 - name: Add ansible repository.
