--- a/ansible/playbooks/99_base.yml
+++ b/ansible/playbooks/99_base.yml
@@ -1,8 +1,5 @@
 ---
   - hosts: all
-    roles:
-      - { role: mgrote.set_apt_sources, tags: "sources", become: yes}
-      - { role: mgrote.update_packages, tags: "update", become: yes}
-      - { role: mgrote.install_packages, tags: "install", become: yes}
-      - { role: ntp-client, tags: "ntp", become: yes}
-      - { role: ryandaniels.create_users, tags: "user", become: yes}
+  - import_playbook: 1_create_users.yml
+  - import_playbook: 2_packages.yml
+  - import_playbook: ntp-client.yml
