--- a/ansible/roles/dhcp_server_einrichten/handlers/main.yml
+++ b/ansible/roles/dhcp_server_einrichten/handlers/main.yml
@@ -1,4 +1,4 @@
-- name: dnsmasq Konfigurationsänderungen aktivieren
+- name: dnsmasq Konfigurationsaenderungen aktivieren
   become: true
   ansible.builtin.systemd:
     name: dnsmasq
