add name and state to journalconf

--- a/ansible/roles/dhcp_server_einrichten/tasks/main.yml
+++ b/ansible/roles/dhcp_server_einrichten/tasks/main.yml
@@ -16,6 +16,8 @@
   - name: journalconf bearbeiten
     become: true
     ansible.builtin.lineinfile:
+      name: journalconf storage persistent machen
+      state: present
       path: /etc/systemd/journald.conf
       line: "Storage=persistent"
       create: yes
