--- a/ansible/roles/deactivate_ssh_password_login/tasks/main.yml
+++ b/ansible/roles/deactivate_ssh_password_login/tasks/main.yml
@@ -4,7 +4,7 @@
     ansible.builtin.lineinfile:
       path: /etc/ssh/sshd_config
       regexp: '#PasswordAuthentication yes'
-      line: 'PasswordAuthentification no'
+      line: 'PasswordAuthentication no'
       state: present
       validate: "/usr/sbin/sshd -T -f %s"
     notify: restart_sshd
