playbook ssh-password logihn in haertung integriert

--- a/ansible/playbooks/3_haertung.yml
+++ b/ansible/playbooks/3_haertung.yml
@@ -5,3 +5,4 @@
           tags: "ufw",
           become: true,
           when: "not 'proxmox' in group_names" }
+      - deactivate_ssh_password_login
