playbook namen in base angepasst

--- a/ansible/playbooks/99_base.yml
+++ b/ansible/playbooks/99_base.yml
@@ -2,6 +2,5 @@
   - hosts: all
   - import_playbook: 1_create_users.yml
   - import_playbook: 2_packages.yml
-  - import_playbook: ntp-client.yml
-  - import_playbook: prohibit_ssh_passwordlogin.yml
+  - import_playbook: configure_ntp_client.yml
   - import_playbook: 3_haertung.yml
