--- a/ansible/roles/proxy/tasks/main.yml
+++ b/ansible/roles/proxy/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
   - name: proxy setzen
     become: yes
-    ansible.builting.lineinfile:
+    ansible.builtin.lineinfile:
       path: /etc/apt/apt.conf
       line: Acquire::http::proxy "http://{{ server }} {{ port }}"
       state: present
