--- a/ansible/roles/proxy/tasks/main.yml
+++ b/ansible/roles/proxy/tasks/main.yml
@@ -3,5 +3,5 @@
     become: yes
     ansible.builtin.lineinfile:
       path: /etc/apt/apt.conf
-      line: Acquire::http::proxy "http://{{ server }} {{ port }}";
+      line: Acquire::http::proxy "http://{{ server }}:{{ port }}";
       state: present
